# Copyright 2023-2025, CS GROUP - France, https://www.csgroup.eu/
#
# This file is part of APIKeyManager project
#     https://github.com/csgroup-oss/apikey-manager/
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

[build-system]
requires = ["setuptools>=5", "setuptools_scm[toml]>=8.1"]
build-backend = "setuptools.build_meta"

[project]
name = "apikeymanager"
description = "Simple API-Key manager using Keycloak as information provider"
readme = "README.md"
keywords = ["apikeymanager", "api-key"]
license = {text = "Apache-2.0"}
classifiers = [
    "Programming Language :: Python :: 3",
]
dependencies = [
    "uvicorn[standard]",
    "fastapi",
    "pyjwt[crypto]",
    "SQLAlchemy",
    "pydantic_settings",
    "aiohttp",
    "slowapi",
    "python-keycloak",
    "authlib",
    "itsdangerous",
]
dynamic = ["version"]

[project.optional-dependencies]
dev = [
    "bandit",
    "black",
    "flake8",
    "flake8-quotes",
    "flake8-annotations",
    "flake8-bandit",
    "flake8-bugbear",
    "isort",
    "mypy",
    "pre-commit",
    "pytest",
    "pytest-cov",
    "pytest-docker",
    "pytest-error-for-skips",
    "pytest-html",
    "pytest-mock",
    "requests",
    "safety",
    "twine",
]

postgres = [
    "psycopg2_binary",
]

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q"
testpaths = [
    "tests",
    "integration",
]
#log_cli = 1
#log_cli_level=INFO
#log_format = %(asctime)s %(levelname)s %(message)s
#log_date_format = %Y-%m-%d %H:%M:%S

[tool.setuptools]
py-modules = ["app"]

[tool.setuptools_scm]
write_to = "app/_version.py"
write_to_template = '''# This file is part of APIKeyManger project
#     https://github.com/csgroup-oss/apikey-manager/
# File generated by setuptools_scm
# don't change, don't track in version control
__version__ = "{version}"
'''

[tool.black]
line-length = 88

[tool.pycln]
all = true

[tool.isort]
line_length = 88
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
profile = "black"

[tool.check-manifest]
ignore = [".vscode/*", "Dockerfile"]

[tool.bandit.assert_used]
skips = ['*/test_*.py']
